--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p class="box__paragraph">
         Please let us know how we did with your support request. 
         All feedback is appreciated to help us improve our offering!</p>
-        <ul>
+        <!--<ul>
           <li data-number="1">1</li>
           <li data-number="2">2</li>
           <li data-number="3">3</li>
@@ -39,6 +39,23 @@
           
         </ul>
         <button class="btn">Submit</button>
+      -->
+
+        <!--Updating my solution-->
+
+        <form class="form">
+
+          <div class="form__radio">
+            <input type="radio" id="one" value="1" name="rating"> <label for="one">  1</label>
+            <input type="radio" id="two" value="2" name="rating"> <label for="two">2</label>
+            <input type="radio" id="three" value="3" name="rating"> <label for="three">3</label>
+            <input type="radio" id="four" value="4" name="rating"> <label for="four">4</label>
+            <input type="radio" id="five" value="5" name="rating"> <label for="five">5</label>
+          </div>
+          
+   
+          <button type="submit" class="btn"> Submit</button>
+        </form>
     </div>
 
     <!-- SECOND BOX -->
